--- a/bizOne/build.gradle
+++ b/bizOne/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     kapt deps.arouter.compiler
+    kapt deps.dagger.compiler
+
     implementation project(":common")
 }
