--- a/bizonetestapp/build.gradle
+++ b/bizonetestapp/build.gradle
@@ -1,4 +1,3 @@
-/*测试 bizOne module*/
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -24,6 +23,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -39,6 +39,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -53,6 +60,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     kapt deps.arouter.compiler
+    kapt deps.dagger.compiler
+
     /*注意目录层级*/
     implementation project(":common")
     runtimeOnly project(":bizOne")
