--- a/bizonetestapp/src/main/AndroidManifest.xml
+++ b/bizonetestapp/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zhc.bizonetestapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".BizOneTestApplication"
         android:allowBackup="true"
