--- a/properties.gradle
+++ b/properties.gradle
@@ -1,5 +1,15 @@
 def versions = [:]
 versions.constraint_layout = "2.0.1"
+versions.retrofit = "2.9.0"
+versions.rxjava2 = "2.2.19"
+versions.rx_android = "2.1.1"
+versions.coroutines = "1.3.5"
+versions.rx_lifecycle = "2.2.0"
+versions.lifecycle = "2.2.0"
+versions.lifecycle_viewmodel = "2.2.0"
+versions.multidex = "2.0.0"
+versions.dagger = "2.16"
+
 
 def deps = [:]
 
@@ -8,7 +18,42 @@ arouter.api = "com.alibaba:arouter-api:1.4.1"
 arouter.compiler = "com.alibaba:arouter-compiler:1.2.1"
 deps.arouter = arouter
 
+
+def retrofit = [:]
+retrofit.runtime = "com.squareup.retrofit2:retrofit:$versions.retrofit"
+retrofit.gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
+retrofit.adapter_rxjava2 = "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
+retrofit.mock = "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
+deps.retrofit = retrofit
+
+def coroutines = [:]
+coroutines.core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines"
+coroutines.android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines"
+coroutines.rx2 = "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$versions.coroutines"
+deps.coroutines = coroutines
+
+
+def lifecycle = [:]
+lifecycle.runtime = "androidx.lifecycle:lifecycle-runtime:$versions.lifecycle"
+lifecycle.extensions = "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle"
+lifecycle.java8 = "androidx.lifecycle:lifecycle-common-java8:$versions.lifecycle"
+lifecycle.viewmodel_ktx = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle_viewmodel"
+lifecycle.livedata = "android.arch.lifecycle:livedata:$versions.lifecycle"
+lifecycle.compiler = "androidx.lifecycle:lifecycle-compiler:$versions.lifecycle"
+deps.lifecycle = lifecycle
+
+def dagger = [:]
+dagger.runtime = "com.google.dagger:dagger:$versions.dagger"
+dagger.android = "com.google.dagger:dagger-android:$versions.dagger"
+dagger.android_support = "com.google.dagger:dagger-android-support:$versions.dagger"
+dagger.compiler = "com.google.dagger:dagger-compiler:$versions.dagger"
+dagger.android_support_compiler = "com.google.dagger:dagger-android-processor:$versions.dagger"
+deps.dagger = dagger
+
 deps.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
+deps.rxjava2 = "io.reactivex.rxjava2:rxjava:$versions.rxjava2"
+deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
+deps.multidex = "androidx.multidex:multidex:$versions.multidex"
 
 def fun1() {
 
