--- a/bizOne/src/main/AndroidManifest.xml
+++ b/bizOne/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.zhc.bizone">
 
     <application>
-        <activity android:name=".BizOneActivity"
+        <activity android:name=".ui.activity.BizOneActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
     </application>
