--- a/properties.gradle
+++ b/properties.gradle
@@ -10,6 +10,8 @@ versions.lifecycle_viewmodel = "2.2.0"
 versions.multidex = "2.0.0"
 versions.dagger = "2.16"
 versions.adapterHelper = "3.0.6"
+versions.switchButton = "2.0.3"
+versions.utilcode = "1.30.4"
 
 def deps = [:]
 
@@ -55,6 +57,9 @@ deps.rxjava2 = "io.reactivex.rxjava2:rxjava:$versions.rxjava2"
 deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
 deps.multidex = "androidx.multidex:multidex:$versions.multidex"
 deps.adapterHelper = "com.github.CymChad:BaseRecyclerViewAdapterHelper:$versions.adapterHelper"
+deps.switchButton = "com.kyleduo.switchbutton:library:$versions.switchButton"
+deps.utilcode = "com.blankj:utilcode:$versions.utilcode"
+
 
 def fun1() {
 
