--- a/properties.gradle
+++ b/properties.gradle
@@ -12,6 +12,7 @@ versions.dagger = "2.16"
 versions.adapterHelper = "3.0.6"
 versions.switchButton = "2.0.3"
 versions.utilcode = "1.30.4"
+versions.glide = "4.9.0"
 
 def deps = [:]
 
@@ -51,6 +52,14 @@ dagger.android_support = "com.google.dagger:dagger-android-support:$versions.dag
 dagger.compiler = "com.google.dagger:dagger-compiler:$versions.dagger"
 dagger.android_support_compiler = "com.google.dagger:dagger-android-processor:$versions.dagger"
 deps.dagger = dagger
+
+def glide = [:]
+glide.runtime = "com.github.bumptech.glide:glide:$versions.glide"
+glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide"
+glide.glide_annotations = "com.github.bumptech.glide:annotations:$versions.glide"
+glide.glide_okhttp3_integration = "com.github.bumptech.glide:okhttp3-integration:$versions.glide"
+glide.transformations = "jp.wasabeef:glide-transformations:4.3.0"
+deps.glide = glide
 
 deps.constraint_layout = "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
 deps.rxjava2 = "io.reactivex.rxjava2:rxjava:$versions.rxjava2"
