--- a/properties.gradle
+++ b/properties.gradle
@@ -13,6 +13,7 @@ versions.adapterHelper = "3.0.6"
 versions.switchButton = "2.0.3"
 versions.utilcode = "1.30.4"
 versions.glide = "4.9.0"
+versions.okhttp_logging_interceptor = "3.11.0"
 
 def deps = [:]
 
@@ -68,6 +69,7 @@ deps.multidex = "androidx.multidex:multidex:$versions.multidex"
 deps.adapterHelper = "com.github.CymChad:BaseRecyclerViewAdapterHelper:$versions.adapterHelper"
 deps.switchButton = "com.kyleduo.switchbutton:library:$versions.switchButton"
 deps.utilcode = "com.blankj:utilcode:$versions.utilcode"
+deps.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:${versions.okhttp_logging_interceptor}"
 
 
 def fun1() {
