--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
         classpath 'com.mcxiaoke.packer-ng:plugin:2.0.1'
 
+        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.10'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
