--- a/bizOne/src/main/AndroidManifest.xml
+++ b/bizOne/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
         <activity android:name=".ui.activity.BizOneActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
+
+        <activity android:name=".ui.activity.WebViewActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
