--- a/common/build.gradle
+++ b/common/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     api deps.glide.glide_annotations
     api deps.glide.transformations
     api deps.okhttp_logging_interceptor
+//    api deps.jsbridge
+    implementation project(":jsBridgelibrary")
 
     api 'org.aspectj:aspectjrt:1.9.5'
 }
