--- a/properties.gradle
+++ b/properties.gradle
@@ -14,6 +14,7 @@ versions.switchButton = "2.0.3"
 versions.utilcode = "1.30.4"
 versions.glide = "4.9.0"
 versions.okhttp_logging_interceptor = "3.11.0"
+versions.jsbridge = "1.0.2"
 
 def deps = [:]
 
@@ -70,6 +71,7 @@ deps.adapterHelper = "com.github.CymChad:BaseRecyclerViewAdapterHelper:$versions
 deps.switchButton = "com.kyleduo.switchbutton:library:$versions.switchButton"
 deps.utilcode = "com.blankj:utilcode:$versions.utilcode"
 deps.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:${versions.okhttp_logging_interceptor}"
+deps.jsbridge = "com.github.lzyzsd:jsbridge:${versions.jsbridge}"
 
 
 def fun1() {
