--- a/faceDetection/build.gradle
+++ b/faceDetection/build.gradle
@@ -1,14 +1,6 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
-    id "kotlin-android-extensions"
-}
-apply plugin: "kotlin-kapt"
-
-kapt {
-    arguments {
-        arg("AROUTER_MODULE_NAME", project.getName())
-    }
 }
 
 android {
@@ -16,13 +8,20 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++11 -static-openmp -fopenmp"
+                abiFilters "arm64-v8a"
+            }
+        }
     }
 
     buildTypes {
@@ -38,6 +37,19 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+            version "3.10.2"
+        }
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['src/main/jniLibs']
+            jni.srcDirs = ['src/main/cpp']
+        }
+    }
 }
 
 dependencies {
@@ -50,12 +62,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    kapt deps.arouter.compiler
-    kapt deps.dagger.compiler
-
     implementation project(":common")
-    implementation project(":loginModule")
-    implementation project(":jsBridgelibrary")
-    implementation project(":faceDetection")
 
 }
