人脸检测测试 yolov5 retinaFace

--- a/bizOne/src/main/AndroidManifest.xml
+++ b/bizOne/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".ui.activity.PdfViewActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".ui.activity.FaceDetectionActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait" />
