--- a/faceDetection/build.gradle
+++ b/faceDetection/build.gradle
@@ -19,7 +19,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11 -static-openmp -fopenmp"
-                abiFilters "arm64-v8a"
+                abiFilters "armeabi-v7a"
             }
         }
     }
